@@ -1,3 +1,15 @@
+2009-12-01  Per Bothner  <per@bothner.com>
+
+	* FindTailCalls.java (walkClassExp): Don't setCanRead.
+	* ModuleExp.java (allocFields): Remove special case for ClassExp.
+	* FindCapturedVars.java (walkLambdaExp): Don't inline a named
+	module-level function, even if we can.
+	(capture): Needs lexical link even if can-call, not just can-read.
+	* ClassExp.java (HAS_SUBCLASS): New flag.
+	(<init>): Don't setCanRead.  Don't create PairClassType - yet.
+	(setTypes): Don't need to create PairClassType the class is private
+	and has no sub-classes.
+
 2009-11-04  Per Bothner  <per@bothner.com>
 
 	* ModuleExp.java (compilerAvailable): New static flag.
